force-app/main/default/objects/Salesforce_Support_Work_Log__c/Salesforce_Support_Work_Log__c.object-meta.xml
<CustomObject>
    <description>Detail object for the Salesforce Support Request for logging work and time spent on Salesforce support requests.</description>
    <label>Salesforce Support Work Log</label>
    <nameField>
        <label>Work Log Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Support Work Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>