force-app/main/default/objects/Salesforce_Support_Work_Log__c/fields/Description_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Work__c</fullName>
    <label>Description of Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>