force-app/main/default/objects/Salesforce_Support_Work_Log__c/fields/Salesforce_Support_Epic__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Support_Epic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup relating Salesforce work logs to a Salesforce Epic</description>
    <inlineHelpText>Relate this work log to a Salesforce Epic</inlineHelpText>
    <label>Epic</label>
    <referenceTo>Salesforce_Support_Epic__c</referenceTo>
    <relationshipLabel>Work Logs</relationshipLabel>
    <relationshipName>Salesforce_Support_Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>