force-app/main/default/objects/Salesforce_Support_Work_Log__c/fields/Salesforce_Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Support_Request__c</fullName>
    <description>Master detail relationship between Salesforce Support Requests and Salesforce Support Work Logs</description>
    <label>Salesforce Support Request</label>
    <referenceTo>Salesforce_Support_Request__c</referenceTo>
    <relationshipLabel>Work Logs</relationshipLabel>
    <relationshipName>Salesforce_Support_Work_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>