force-app/main/default/objects/Salesforce_Support_Work_Log__c/fields/Salesforce_Support_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Support_Sprint__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>lookup relation between work logs and Salesforce Sprints</description>
    <inlineHelpText>Relate this work log to a Salesforce Sprint</inlineHelpText>
    <label>Sprint</label>
    <referenceTo>Salesforce_Support_Sprint__c</referenceTo>
    <relationshipLabel>Work Logs</relationshipLabel>
    <relationshipName>Salesforce_Support_Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>