force-app/main/default/objects/Salesforce_Support_Work_Log__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>